--- a/src/porfolioApp.css
+++ b/src/porfolioApp.css
@@ -284,7 +284,7 @@ nav {
   font-size: 20px;
   margin-left: 5px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 500px) {
   .nav-text-logo {
     font-size: 30px;
   }
@@ -352,21 +352,29 @@ nav {
   .projects-container {
     width: 100%;
     place-content: center;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
+    justify-content: center;
+
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 50px 8px;
   }
   .card {
-    width: 100%;
+    width: 300px;
+    max-height: 450px;
+    justify-content: start;
   }
   .card-image {
     text-decoration: none;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 200px;
+    max-height: 200px;
   }
   .card-image img {
     width: 100%;
-    height: 100%;
+    height: 200px;
     object-fit: cover;
+    object-position: top;
   }
 }
