--- a/src/porfolioApp.css
+++ b/src/porfolioApp.css
@@ -214,8 +214,8 @@ nav {
 /*Projects*/
 .projects {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
   min-height: calc(100vh - 41px);
   padding: 30px;
 }
